# cinv

./: Cargo.toml  LICENSE  README.md
data/: address_codes.csv
scripts/: generate_address_codes_rs.py
src/: address_codes.rs  lib.rs
tests/: integration_test.rs
